--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "react-hot-toast": "2.2.0",
     "react-icons": "4.3.1",
     "react-router-dom": "5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-select": "5.2.1",
     "react-tabs": "3.2.3",
     "react-toastify": "6.0.9",
