--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/react-dom": "18.0.6",
     "@types/react-router-dom": "5.3.3",
     "@uniswap/sdk-core": "3.0.1",
-    "@uniswap/v3-sdk": "3.7.1",
+    "@uniswap/v3-sdk": "^3.9.0",
     "@web3-react/core": "6.1.9",
     "@web3-react/injected-connector": "6.0.7",
     "@web3-react/walletconnect-connector": "6.2.8",
