--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "@lingui/cli": "^3.13.3",
     "@lingui/loader": "3.14.0",
     "@lingui/macro": "3.13.3",
-    "eslint": "7.32.0",
+    "eslint-config-react-app": "^7.0.1",
     "husky": "7.0.4",
     "lint-staged": "12.3.4",
     "prettier": "2.5.1"
